--- a/assets/html/destination-europa.html
+++ b/assets/html/destination-europa.html
@@ -20,6 +20,8 @@
             </a>
         </div>
 
+        <div class="primary-line"></div>
+
         <button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav-toggle">
             <span class="sr-only">Menu</span>
         </button>
@@ -66,44 +68,46 @@
                 <div class="destination-information">
                     <img src="../img/destination/image-europa.png" alt="europa" class="destination-img">
 
-                    <div class="destination-data">
-                        <ul class="destination-navigation flex">
-                            <li>
-                                <a href="../html/destination-moon.html" class="destination-nav-link">Moon</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-mars.html" class="destination-nav-link">Mars</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-europa.html" class="destination-nav-link destination-active">Europa</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-titan.html" class="destination-nav-link">Titan</a>
-                            </li>
-                        </ul>
+                    <div class="destination-data-container">
+                        <div class="destination-data">
+                            <ul class="destination-navigation flex">
+                                <li>
+                                    <a href="../html/destination-moon.html" class="destination-nav-link">Moon</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-mars.html" class="destination-nav-link">Mars</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-europa.html" class="destination-nav-link destination-active">Europa</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-titan.html" class="destination-nav-link">Titan</a>
+                                </li>
+                            </ul>
 
-                        <h3 class="destination-title">Europa</h3>
+                            <h3 class="destination-title">Europa</h3>
 
-                        <p class="destination-description">The smallest of the four Galilean moons orbiting Jupiter, Europa is a 
-                            winter lover’s dream. With an icy surface, it’s perfect for a bit of 
-                            ice skating, curling, hockey, or simple relaxation in your snug 
-                            wintery cabin.
-                        </p>
-                    </div>
-
-                    <div class="destination-line"></div>
-
-                    <div class="destination-numbers">
-                        <div class="destination-numbers-moon">
-                            <p class="destination-numbers-description">Avg. Distance</p>
-                            <p class="destination-numbers-distance">628 mil. km</p>
+                            <p class="destination-description">The smallest of the four Galilean moons orbiting Jupiter, Europa is a 
+                                winter lover’s dream. With an icy surface, it’s perfect for a bit of 
+                                ice skating, curling, hockey, or simple relaxation in your snug 
+                                wintery cabin.
+                            </p>
                         </div>
-                        <div class="destination-numbers-moon">
-                            <p class="destination-numbers-description">Est. Travel Time</p>
-                            <p class="destination-numbers-time">3 years</p>
+
+                        <div class="destination-line"></div>
+
+                        <div class="destination-numbers">
+                            <div class="destination-numbers-moon">
+                                <p class="destination-numbers-description">Avg. Distance</p>
+                                <p class="destination-numbers-distance">628 mil. km</p>
+                            </div>
+                            <div class="destination-numbers-moon">
+                                <p class="destination-numbers-description">Est. Travel Time</p>
+                                <p class="destination-numbers-time">3 years</p>
+                            </div>
                         </div>
                     </div>
-
+                    
                 </div>
             </div>
         </section>
