--- a/assets/html/destination-mars.html
+++ b/assets/html/destination-mars.html
@@ -20,6 +20,8 @@
             </a>
         </div>
 
+        <div class="primary-line"></div>
+
         <button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav-toggle">
             <span class="sr-only">Menu</span>
         </button>
@@ -66,43 +68,45 @@
                 <div class="destination-information">
                     <img src="../img/destination/image-mars.png" alt="mars" class="destination-img">
 
-                    <div class="destination-data">
-                        <ul class="destination-navigation flex">
-                            <li>
-                                <a href="../html/destination-moon.html" class="destination-nav-link">Moon</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-mars.html" class="destination-nav-link destination-active">Mars</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-europa.html" class="destination-nav-link">Europa</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-titan.html" class="destination-nav-link">Titan</a>
-                            </li>
-                        </ul>
+                    <div class="destination-data-container">
+                        <div class="destination-data">
+                            <ul class="destination-navigation flex">
+                                <li>
+                                    <a href="../html/destination-moon.html" class="destination-nav-link">Moon</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-mars.html" class="destination-nav-link destination-active">Mars</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-europa.html" class="destination-nav-link">Europa</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-titan.html" class="destination-nav-link">Titan</a>
+                                </li>
+                            </ul>
 
-                        <h3 class="destination-title">Mars</h3>
+                            <h3 class="destination-title">Mars</h3>
 
-                        <p class="destination-description">Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, 
-                            the tallest planetary mountain in our solar system. It’s two and a half times 
-                            the size of Everest!
-                        </p>
-                    </div>
-
-                    <div class="destination-line"></div>
-
-                    <div class="destination-numbers">
-                        <div class="destination-numbers-moon">
-                            <p class="destination-numbers-description">Avg. Distance</p>
-                            <p class="destination-numbers-distance">225 mil. km</p>
+                            <p class="destination-description">Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, 
+                                the tallest planetary mountain in our solar system. It’s two and a half times 
+                                the size of Everest!
+                            </p>
                         </div>
-                        <div class="destination-numbers-moon">
-                            <p class="destination-numbers-description">Est. Travel Time</p>
-                            <p class="destination-numbers-time">9 months</p>
+
+                        <div class="destination-line"></div>
+
+                        <div class="destination-numbers">
+                            <div class="destination-numbers-moon">
+                                <p class="destination-numbers-description">Avg. Distance</p>
+                                <p class="destination-numbers-distance">225 mil. km</p>
+                            </div>
+                            <div class="destination-numbers-moon">
+                                <p class="destination-numbers-description">Est. Travel Time</p>
+                                <p class="destination-numbers-time">9 months</p>
+                            </div>
                         </div>
                     </div>
-
+                        
                 </div>
             </div>
         </section>
