--- a/assets/html/destination-moon.html
+++ b/assets/html/destination-moon.html
@@ -20,6 +20,8 @@
             </a>
         </div>
 
+        <div class="primary-line"></div>
+
         <button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav-toggle">
             <span class="sr-only">Menu</span>
         </button>
@@ -66,43 +68,45 @@
                 <div class="destination-information">
                     <img src="../img/destination/image-moon.png" alt="moon" class="destination-img">
 
-                    <div class="destination-data">
-                        <ul class="destination-navigation flex">
-                            <li class="active_link">
-                                <a href="../html/destination-moon.html" class="destination-nav-link destination-active">Moon</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-mars.html" class="destination-nav-link">Mars</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-europa.html" class="destination-nav-link">Europa</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-titan.html" class="destination-nav-link">Titan</a>
-                            </li>
-                        </ul>
+                    <div class="destination-data-container">
+                        <div class="destination-data">
+                            <ul class="destination-navigation flex">
+                                <li class="active_link">
+                                    <a href="../html/destination-moon.html" class="destination-nav-link destination-active">Moon</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-mars.html" class="destination-nav-link">Mars</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-europa.html" class="destination-nav-link">Europa</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-titan.html" class="destination-nav-link">Titan</a>
+                                </li>
+                            </ul>
 
-                        <h3 class="destination-title">Moon</h3>
+                            <h3 class="destination-title">Moon</h3>
 
-                        <p class="destination-description">See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain
-                            perspective and come back refreshed. While you’re there, take in some history by visiting 
-                            the Luna 2 and Apollo 11 landing sites.
-                        </p>
-                    </div>
-
-                    <div class="destination-line"></div>
-
-                    <div class="destination-numbers">
-                        <div class="destination-numbers-moon">
-                            <p class="destination-numbers-description">Avg. Distance</p>
-                            <p class="destination-numbers-distance">384,400 km</p>
+                            <p class="destination-description">See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain
+                                perspective and come back refreshed. While you’re there, take in some history by visiting 
+                                the Luna 2 and Apollo 11 landing sites.
+                            </p>
                         </div>
-                        <div class="destination-numbers-moon">
-                            <p class="destination-numbers-description">Est. Travel Time</p>
-                            <p class="destination-numbers-time">3 days</p>
+
+                        <div class="destination-line"></div>
+
+                        <div class="destination-numbers">
+                            <div class="destination-numbers-moon">
+                                <p class="destination-numbers-description">Avg. Distance</p>
+                                <p class="destination-numbers-distance">384,400 km</p>
+                            </div>
+                            <div class="destination-numbers-moon">
+                                <p class="destination-numbers-description">Est. Travel Time</p>
+                                <p class="destination-numbers-time">3 days</p>
+                            </div>
                         </div>
                     </div>
-
+                        
                 </div>
             </div>
         </section>
