--- a/assets/html/destination-titan.html
+++ b/assets/html/destination-titan.html
@@ -20,6 +20,8 @@
             </a>
         </div>
 
+        <div class="primary-line"></div>
+
         <button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav-toggle">
             <span class="sr-only">Menu</span>
         </button>
@@ -66,43 +68,45 @@
                 <div class="destination-information">
                     <img src="../img/destination/image-titan.png" alt="titan" class="destination-img">
 
-                    <div class="destination-data">
-                        <ul class="destination-navigation flex">
-                            <li>
-                                <a href="../html/destination-moon.html" class="destination-nav-link">Moon</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-mars.html" class="destination-nav-link">Mars</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-europa.html" class="destination-nav-link">Europa</a>
-                            </li>
-                            <li>
-                                <a href="../html/destination-titan.html" class="destination-nav-link destination-active">Titan</a>
-                            </li>
-                        </ul>
+                    <div class="destination-data-container">
+                        <div class="destination-data">
+                            <ul class="destination-navigation flex">
+                                <li>
+                                    <a href="../html/destination-moon.html" class="destination-nav-link">Moon</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-mars.html" class="destination-nav-link">Mars</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-europa.html" class="destination-nav-link">Europa</a>
+                                </li>
+                                <li>
+                                    <a href="../html/destination-titan.html" class="destination-nav-link destination-active">Titan</a>
+                                </li>
+                            </ul>
 
-                        <h3 class="destination-title">Titan</h3>
+                            <h3 class="destination-title">Titan</h3>
 
-                        <p class="destination-description">The only moon known to have a dense atmosphere other than Earth, Titan 
-                            is a home away from home (just a few hundred degrees colder!). As a 
-                            bonus, you get striking views of the Rings of Saturn.
-                        </p>
-                    </div>
-
-                    <div class="destination-line"></div>
-
-                    <div class="destination-numbers">
-                        <div class="destination-numbers-moon">
-                            <p class="destination-numbers-description">Avg. Distance</p>
-                            <p class="destination-numbers-distance">1.6 bil. km</p>
+                            <p class="destination-description">The only moon known to have a dense atmosphere other than Earth, Titan 
+                                is a home away from home (just a few hundred degrees colder!). As a 
+                                bonus, you get striking views of the Rings of Saturn.
+                            </p>
                         </div>
-                        <div class="destination-numbers-moon">
-                            <p class="destination-numbers-description">Est. Travel Time</p>
-                            <p class="destination-numbers-time">7 years</p>
+
+                        <div class="destination-line"></div>
+
+                        <div class="destination-numbers">
+                            <div class="destination-numbers-moon">
+                                <p class="destination-numbers-description">Avg. Distance</p>
+                                <p class="destination-numbers-distance">1.6 bil. km</p>
+                            </div>
+                            <div class="destination-numbers-moon">
+                                <p class="destination-numbers-description">Est. Travel Time</p>
+                                <p class="destination-numbers-time">7 years</p>
+                            </div>
                         </div>
                     </div>
-
+                    
                 </div>
             </div>
         </section>
