--- a/assets/html/crew-engineer.html
+++ b/assets/html/crew-engineer.html
@@ -20,6 +20,8 @@
             </a>
         </div>
 
+        <div class="primary-line"></div>
+
         <button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav-toggle">
             <span class="sr-only">Menu</span>
         </button>
